--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,31 @@
-.voicerecording-repo {
-    display:block;
+.voicerecording-applet {
+    text-align: center;
+/*    display:block;
     text-align:center;
-    margin: -100px 0 0 -7% ;
+    margin: -100px 0 0 -7% ;*/
 }
 
 .voicerecording-input {
-    margin-left:10px;
-    width:100px;
+/*    margin-left:10px;
+    width:100px;*/
 }
 
 .voicerecording-name {
-    display:block;
+/*    display:block;
     text-align:center;
-    margin:-50px 0 0 -13%;
+    margin:-50px 0 0 -13%;*/
 }
 
 .voicerecording-submit {
-    display:block;
+/*    display:block;
     text-align:center;
-    margin:-20px 0 0 -3%;
+    margin:-20px 0 0 -3%;*/
 }
 
 .voicerecording-submit input {
-    padding:1px 6px;
+    //padding:1px 6px;
 }
 
 .fp-login-submit, td.input {
-    display:none;
+    //display:none;
 }
